--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ gunicorn = "*"
 mysqlclient = "*"
 flask-admin = "*"
 sqlalchemy = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.10"
